@@ -1,5 +1,8 @@
 2012-06-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* rcsc/action/body_go_to_point.cpp:
+	- ゴールポストとの衝突回避アルゴリズムのバグを修正
+
 	* rcsc/player/player_intercept.cpp:
 	- 他のプレイヤへのボーナスステップを修正．ceil(信頼性カウント*0.5)に変更
 
